--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0 maximum-scale-5.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="keywords"
     content="vinilo, personalizado, sublimado, estampado, remera, taza, gorra, vaso, rock, malvinas" />
   <meta name="description"
@@ -22,15 +22,21 @@
     href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,400;1,500;1,700&display=swap"
     rel="stylesheet" />
 
+  <!-- FONTAWESOME -->
+  <script src="https://kit.fontawesome.com/0752328cab.js" crossorigin="anonymous"></script>
+
   <!-- CSS STYLE -->
   <link rel="stylesheet" href="../css/style.css" />
   <!-- JS SCRIPT -->
-  <script src="../js/script.js" defer></script>
+  <script src="../js/form.js" defer></script>
   <!-- AOS ANIMATION -->
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+  <!-- ANIMATE -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 </head>
 
 <body class="body">
+
   <!-- HEADER -->
   <header class="header">
     <div class="headerContainer">
@@ -58,44 +64,10 @@
   </header>
 
   <!-- MAIN -->
-  <main class="main">
-    <section class="containerMain" data-aos="fade-up" data-aos-duration="3000">
-
-      <p>AQUÍ VAN LOS ITEMS DEL CARRITO</p>
-      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloribus maxime mollitia similique, harum quas
-        labore animi assumenda, maiores corrupti saepe dolores consequatur, atque veritatis eveniet culpa cum vel velit
-        ducimus?
-        Dolore quaerat ullam nisi veniam! Natus maiores quaerat porro velit. Veniam alias, asperiores praesentium
-        aspernatur consequuntur incidunt esse, expedita voluptate dolorum modi doloremque totam. Nihil quas ducimus
-        harum officia maiores.
-        Nesciunt delectus nemo similique iure, rem distinctio ipsa et aut praesentium fugiat suscipit ad cupiditate
-        voluptas quisquam velit consequatur, doloremque sapiente magni eos dignissimos quas natus quia doloribus? Totam,
-        necessitatibus.
-        Eligendi quas consectetur sunt dicta accusamus laborum ab excepturi dolore vel molestiae velit neque adipisci,
-        officia quisquam, accusantium aliquam nam sint omnis eaque quidem repellat dignissimos aut alias. Non, cum?
-        A at cupiditate repellendus ex ipsam minus minima commodi! Sit repellat reprehenderit aperiam nam nihil unde
-        earum in temporibus voluptatem rerum fuga deserunt atque perspiciatis natus sequi, aliquid facilis sunt!
-        Pariatur id repellat sapiente minima nulla soluta! Molestias quo nobis repellat dolores vitae unde, quaerat quis
-        fuga fugit est tenetur officiis optio error vero ducimus, distinctio exercitationem reprehenderit natus non.
-        Ipsa ipsum architecto inventore dicta dignissimos tempore labore culpa natus facilis deserunt reiciendis, quas
-        animi cupiditate ut, quis facere aspernatur et fugit porro corporis minima. Voluptas alias reiciendis cum
-        necessitatibus!
-        Voluptatum nobis corporis consectetur minima natus necessitatibus, illo nulla, ipsa delectus dicta tempora,
-        beatae recusandae? Perferendis nostrum voluptas cupiditate corporis. Recusandae voluptates illum atque
-        laboriosam nulla sed eum similique ipsam?
-        Aliquid atque ratione numquam ab facere, inventore ea quod minima error? Autem ut deserunt maxime ipsa tempora!
-        Facere, maxime et alias nihil necessitatibus ratione iure id saepe beatae iusto non?
-        Sapiente sed quaerat voluptatum harum debitis enim, at, consequuntur possimus aut aperiam ab officiis unde
-        reiciendis sit. Aliquid, dolores est, cupiditate velit, numquam reiciendis libero temporibus necessitatibus
-        suscipit odit harum.</p>
-
-    </section>
-
-    <!-- WHATSAPP -->
-    <a href="https://wa.me/5492612061160" target="_blank" rel="noopener noreferrer">
-      <img src="../assets/icon/wtsp.png" class="wtp__fixed" alt="Ícono de acceso al Whatsapp de KPREM Arte Gráfico" />
-    </a>
-
+  <main class="main mainCarrito">
+    <h1>Layout Carrito</h1>
+    <p>¡Tienda en Construcción!</p>
+    <p>• Items de carrito •</p>
   </main>
 
 
