Formulario con validación - DOM - Objects - Arrays - Responsive

--- a/index.html
+++ b/index.html
@@ -177,8 +177,9 @@
 
   <!-- MAIN -->
   <main class="main">
-    <p>Bienvenido</p>
+    <h1>Bienvenido</h1>
     <p>¡Tienda en Construcción!</p>
+    <img class="img" src="assets/img/screwdriver-wrench-solid.svg" alt="Herramientras de construcción">
   </main>
 
 
