--- a/pages/terms.html
+++ b/pages/terms.html
@@ -49,7 +49,7 @@
   </header>
 
   <!-- MAIN -->
-  <main class="main">
+  <main class="main mainTerms">
     <h1>Términos y Condiciones</h1>
     <ol>
       <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cupiditate iste expedita similique assumenda facere,
