Formulario de Registro e Ingreso

--- a/index.html
+++ b/index.html
@@ -27,127 +27,20 @@
 
   <!-- CSS STYLE -->
   <link rel="stylesheet" href="css/style.css" />
+
   <!-- JS SCRIPT -->
-  <script src="js/form.js" defer></script>
+  <script src="js/formTabs.js" defer></script>
+  <script src="js/cuentaClass.js" defer></script>
+  <script src="js/forms.js" defer></script>
+  
   <!-- AOS ANIMATION -->
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+
   <!-- ANIMATE -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 </head>
 
 <body class="body">
-
-  <!-- FORMULARIOS DE INGRESO -->
-  <div class="tabContainer active animate__animated animate__fadeInUp animate__slow" id="tabContainer">
-
-    <div class="tab">
-      <div class="headerTab">
-        <a href="#" class="btnCloseTab" id="btnCloseTab">
-          <i class="fa-solid fa-xmark icoClose" id="icoCloseTab"></i>
-        </a>
-        <ul class="options">
-          <li class="option optionActive" id="option1">Registrarse</li>
-          <li class="option " id="option2">Ingresar</li>
-        </ul>
-      </div>
-
-      <div class="contents">
-        <div class="content contentActive" id="content1">
-
-          <!-- FORMULARIO REGISTRARSE-->
-          <form class="form" id="form">
-            <!-- NAME -->
-            <div class="divForm name">
-              <label for="nameInput" class="form-label">Nombre</label>
-              <input type="text" class="form-control" id="nameInput" placeholder="Ingresa tu Nombre" required />
-            </div>
-
-            <!-- LASTNAME -->
-            <div class="divForm lastname">
-              <label for="lastnameInput" class="form-label">Apellido</label>
-              <input type="text" class="form-control" id="lastnameInput" placeholder="Ingresa tu Apellido" required />
-            </div>
-
-            <!-- EMAIL -->
-            <div class="divForm email">
-              <label for="emailInput" class="form-label">Email</label>
-              <input type="email" class="form-control" id="emailInput" aria-describedby="emailHelp"
-                placeholder="usuario@email.com" required />
-            </div>
-
-            <!-- PASSWORD -->
-            <div class="divForm password">
-              <label for="passInput" class="form-label">Contraseña</label>
-              <input type="password" class="form-control" id="passInput" placeholder="Elije tu Contraseña" required />
-            </div>
-
-            <!-- CEL -->
-            <div class="divForm cel">
-              <label for="celInput" class="form-label">Celular</label>
-              <input type="text" class="form-control" id="celInput" aria-describedby="emailHelp"
-                placeholder="542613456789" required />
-            </div>
-
-            <!-- TERMS -->
-            <div class="divForm terms">
-              <p> Al registrarme acepto los <br>
-                <a href="pages/terms.html" target="_blank" class="termsConditions" rel="noopener noreferrer">
-                  <em>Términos y Condiciones</em>
-                </a>
-              </p>
-              </label>
-            </div>
-
-            <!-- SUBMIT -->
-            <div class="divForm submit">
-              <button type="submit" class="btnSubmit" id="btnSubmit">Registrarme</button>
-            </div>
-
-            <!-- ALERTS -->
-            <div class="divForm alert">
-              <p class="alertRegister" id="alertRegister"></p>
-            </div>
-          </form>
-
-        </div>
-
-        <div class="content" id="content2">
-          <!-- FORMULARIO LOGIN-->
-          <form class="form">
-
-
-            <!-- EMAIL -->
-            <div class="divForm emailLogin">
-              <label for="emailInput" class="form-label">Email</label>
-              <input type="email" class="form-control" id="emailInputLogin" aria-describedby="emailHelp"
-                placeholder="usuario@email.com" required />
-            </div>
-
-            <!-- PASSWORD -->
-            <div class="divForm passwordLogin">
-              <label for="passInput" class="form-label">Contraseña</label>
-              <input type="password" class="form-control" id="passInputLogin" placeholder="Ingresa tu Contraseña"
-                required />
-            </div>
-
-
-
-            <!-- SUBMIT -->
-            <div class="divForm submitLogin">
-              <button type="submit" class="btnSubmitLogin" id="btnSubmitLogin">Entrar</button>
-            </div>
-
-            <!-- ALERTS -->
-            <div>
-              <p id="alertLogin" class="alertLogin"></p>
-            </div>
-          </form>
-
-        </div>
-      </div>
-    </div>
-  </div>
-
 
   <!-- HEADER -->
   <header class="header">
@@ -171,15 +64,177 @@
               alt="Imagen de carrito, con acceso al Carrito de Compras" />
           </a>
         </nav>
+        <section class="user" id="user">
+          <p class="userText" id="userText">Invitado</p>
+        </section>
       </section>
     </div>
   </header>
 
   <!-- MAIN -->
   <main class="main">
-    <h1>Bienvenido</h1>
-    <p>¡Tienda en Construcción!</p>
-    <img class="img" src="assets/img/screwdriver-wrench-solid.svg" alt="Herramientras de construcción">
+
+    <!-- FORMULARIOS DE INGRESO -->
+    <div class="tabContainer active animate__animated animate__fadeInUp animate__slow" id="tabContainer">
+
+      <div class="tab">
+        <div class="headerTab">
+          <a href="#" class="btnCloseTab" id="btnCloseTab">
+            <i class="fa-solid fa-xmark icoClose" id="icoCloseTab"></i>
+          </a>
+          <ul class="options">
+            <li class="option optionActive" id="option1">Registrarse</li>
+            <li class="option " id="option2">Ingresar</li>
+          </ul>
+        </div>
+
+        <div class="contents">
+
+          <!-- FORMULARIO REGISTRARSE-->
+          <div class="content contentActive" id="content1">
+            <form class="form" id="form">
+              <!-- NAME -->
+              <div class="divForm name">
+                <label for="nameInput" class="form-label">Nombre</label>
+                <input type="text" class="form-control" id="nameInput" placeholder="Ingresa tu Nombre" required />
+              </div>
+
+              <!-- LASTNAME -->
+              <div class="divForm lastname">
+                <label for="lastnameInput" class="form-label">Apellido</label>
+                <input type="text" class="form-control" id="lastnameInput" placeholder="Ingresa tu Apellido" required />
+              </div>
+
+              <!-- EMAIL -->
+              <div class="divForm email">
+                <label for="emailInput" class="form-label">Email</label>
+                <input type="email" class="form-control" id="emailInput" aria-describedby="emailHelp"
+                  placeholder="usuario@email.com" required />
+              </div>
+
+              <!-- PASSWORD -->
+              <div class="divForm password">
+                <label for="passInput" class="form-label">Contraseña</label>
+                <input type="password" class="form-control" id="passInput" placeholder="Elije tu Contraseña" required />
+              </div>
+
+              <!-- CEL -->
+              <div class="divForm cel">
+                <label for="celInput" class="form-label">Celular</label>
+                <input type="text" class="form-control" id="celInput" aria-describedby="emailHelp"
+                  placeholder="542613456789" required />
+              </div>
+
+              <!-- TERMS -->
+              <div class="divForm terms">
+                <p> Al registrarme acepto los <br>
+                  <a href="pages/terms.html" target="_blank" class="termsConditions" rel="noopener noreferrer">
+                    <em>Términos y Condiciones</em>
+                  </a>
+                </p>
+                </label>
+              </div>
+
+              <!-- SUBMIT -->
+              <div class="divForm submit">
+                <button type="submit" class="btnSubmit" id="btnSubmit">Registrarme</button>
+              </div>
+
+              <!-- ALERTS -->
+              <div class="divForm alert">
+                <p class="alertRegister" id="alertRegister"></p>
+              </div>
+            </form>
+          </div>
+
+          <!-- FORMULARIO LOGIN-->
+          <div class="content" id="content2">
+            <form class="form">
+
+
+              <!-- EMAIL -->
+              <div class="divForm emailLogin">
+                <label for="emailInput" class="form-label">Email</label>
+                <input type="email" class="form-control" id="emailInputLogin" aria-describedby="emailHelp"
+                  placeholder="usuario@email.com" required />
+              </div>
+
+              <!-- PASSWORD -->
+              <div class="divForm passwordLogin">
+                <label for="passInput" class="form-label">Contraseña</label>
+                <input type="password" class="form-control" id="passInputLogin" placeholder="Ingresa tu Contraseña"
+                  required />
+              </div>
+
+
+
+              <!-- SUBMIT -->
+              <div class="divForm submitLogin">
+                <button type="submit" class="btnSubmitLogin" id="btnSubmitLogin">Entrar</button>
+              </div>
+
+              <!-- ALERTS -->
+              <div>
+                <p id="alertLogin" class="alertLogin"></p>
+              </div>
+            </form>
+          </div>
+
+        </div>
+      </div>
+    </div>
+    <section class="containerMain" data-aos="fade-up" data-aos-duration="3000">
+
+      <!-- TEXT INTRO -->
+      <section class="mainText">
+        <p>
+          En <em class="emBold">KPREM Arte Gráfico</em> nos dedicamos a la personalización de diferentes productos,
+          mediante
+          técnicas de estampación, como lo son la sublimación, serigrafía y
+          vinilo.
+        </p>
+        <p>
+          Te invitamos a conocer nuestra tienda y elegir el producto que
+          gustes, con el diseño que siempre quisiste!
+        </p>
+      </section>
+
+      <!-- PRODUCTOS -->
+      <section class="mainProductos">
+
+        <!-- REMERA GUNS -->
+        <div class="productosCard" id="remeGnr">
+          <div class="cardItems">
+            <img class="productoItem remera" src="assets/productos/remera/guns.png"
+              alt="Imagen de remera personalizada">
+
+            <!-- Valores -->
+            <div class="itemsProducto">
+              <h2 class="h2" id="producto">Reme GN´R</h2>
+              <div class="precioProducto">
+                <p class="itemDescription">$</p>
+                <p class="precioUnitario" id="precioUnitario">3500</p>
+              </div>
+              <div class="talle">
+                <p class="itemDescription">Talle: </p>
+                <select name="talle" id="talle">
+                  <option value="S">S</option>
+                  <option value="M">M</option>
+                  <option value="L">L</option>
+                  <option value="XL">XL</option>
+                  <option value="XXL">XXL</option>
+                  <option value="XXXL">XXXL</option>
+                </select>
+              </div>
+              <button class="btnAgregar" id="btnAgregar">Agregar</button>
+            </div>
+          </div>
+        </div>
+
+      </section>
+    </section>
+
+
   </main>
 
 
