Formularios de Registro e Ingreso con Funciones Declaradas, Funciones Flecha, Validación, Operador Ternario, Ciclos, Iteraciones, Condicionales, Objetos, Arrays, Storage

--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
   <!-- JS SCRIPT -->
   <script src="js/formTabs.js" defer></script>
   <script src="js/cuentaClass.js" defer></script>
-  <script src="js/forms.js" defer></script>
-  
+  <script src="js/formRegistro.js" defer></script>
+  <script src="js/formIngreso.js" defer></script>
+
   <!-- AOS ANIMATION -->
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
 
