Segunda PreEntrega CoderHouse JavaScript Emanuel Escudero

--- a/index.html
+++ b/index.html
@@ -18,27 +18,25 @@
   <title>KPREM Arte Gráfico</title>
 
   <!-- FONTS -->
-  <!-- <link
+  <link
     href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,400;1,500;1,700&display=swap"
-    rel="stylesheet" /> -->
+    rel="stylesheet" />
 
   <!-- FONTAWESOME -->
-  <!--  <script src="https://kit.fontawesome.com/0752328cab.js" crossorigin="anonymous"></script> -->
+  <script src="https://kit.fontawesome.com/0752328cab.js" crossorigin="anonymous"></script>
 
   <!-- CSS STYLE -->
   <link rel="stylesheet" href="css/style.css" />
 
   <!-- JS SCRIPT -->
 
-  <script src="js/productClass.js" defer></script>
-  <script src="js/stock.js" defer></script>
   <script src="js/cart.js" defer></script>
 
   <!-- AOS ANIMATION -->
-  <!-- <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" /> -->
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
 
   <!-- ANIMATE -->
-  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" /> -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 </head>
 
 <body class="body">
