Funcionando bien: Formularios de Registro/Ingreso, btn para Login/Logout

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <link rel="stylesheet" href="css/style.css" />
 
   <!-- JS SCRIPT -->
-  <script src="js/main/main.js" defer></script>
+  <!-- <script src="js/main/main.js" defer></script>
   <script src="js/forms/formsInsertados.js" defer></script>
   <script src="js/forms/formRegistro.js" defer></script>
   <script src="js/forms/formTabs.js" defer></script>
@@ -41,7 +41,7 @@
   <script src="js/carrito/productoClass.js" defer></script>
   <script src="js/carrito/stockProductos.js" defer></script>
   <script src="js/carrito/itemClass.js" defer></script>
-  <script src="js/carrito/carrito.js" defer></script>
+  <script src="js/carrito/carrito.js" defer></script> -->
 
   <!-- AOS ANIMATION -->
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
@@ -57,10 +57,9 @@
     <div class="headerContainer">
 
       <!-- LOGO -->
-      <h1 class="h1">
-        <img class="headerLogo" data-aos="fade-right" data-aos-duration="1500" src="assets/img/logo.png"
-          alt="logo de KPREM Arte Gráfico" />
-      </h1>
+      <!-- <h1 class="h1"> -->
+      <img class="headerLogo" data-aos="fade-right" data-aos-duration="1500" src="assets/img/logo.png" alt="logo de KPREM Arte Gráfico" />
+      <!-- </h1> -->
 
       <!-- MENU -->
       <section class="headerMenu" data-aos="fade-left" data-aos-duration="1500">
@@ -68,10 +67,9 @@
           <a class="btnCarrito" href="#" id="btnCarrito">
             <!-- Aquí dentro queda el carritoIcon y el cantidadProductosCarritoIcon -->
           </a>
-          <p id="userText" class="userText">
-          </p>
+          <button id="userText" class="userText">
+        </button>
         </nav>
-
       </section>
     </div>
   </header>
@@ -143,6 +141,17 @@
   <script>
     AOS.init();
   </script>
+
+<script src="js/main/main.js" defer></script>
+<script src="js/forms/formsInsertados.js" defer></script>
+<script src="js/forms/formRegistro.js" defer></script>
+<script src="js/forms/formTabs.js" defer></script>
+<script src="js/forms/formIngreso.js" defer></script>
+<script src="js/forms/cuentaClass.js" defer></script>
+<script src="js/carrito/productoClass.js" defer></script>
+<script src="js/carrito/stockProductos.js" defer></script>
+<script src="js/carrito/itemClass.js" defer></script>
+<script src="js/carrito/carrito.js" defer></script>
 
 </body>
 
