Promises agregadas con sotckProductos.JSON

--- a/pages/terms.html
+++ b/pages/terms.html
@@ -13,9 +13,9 @@
   <meta name="copyright" content="KPREM Arte Gráfico" />
   <meta name="robots" content="index" />
   <!-- FAV ICON -->
-  <link rel="icon" href="../assets/icon/ico.png" />
+  <link rel="icon" href="../assets/icon/favicon.png" />
   <!-- TITLE -->
-  <title>KPREM Arte Gráfico</title>
+  <title>KPREM • Terms & Conditions</title>
 
   <!-- FONTS -->
   <link
@@ -25,12 +25,16 @@
   <!-- FONTAWESOME -->
   <script src="https://kit.fontawesome.com/0752328cab.js" crossorigin="anonymous"></script>
 
+  <!-- SWEETALERT -->
+  <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+
   <!-- CSS STYLE -->
   <link rel="stylesheet" href="../css/style.css" />
-  <!-- JS SCRIPT -->
-  <script src="../js/form.js" defer></script>
+
   <!-- AOS ANIMATION -->
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+
   <!-- ANIMATE -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 </head>
@@ -43,7 +47,7 @@
 
       <!-- LOGO -->
       <h1 class="h1">
-        <img class="headerLogo" data-aos="fade-right" data-aos-duration="1500" src="../assets/img/logo2022.png"
+        <img class="headerLogo" data-aos="fade-right" data-aos-duration="1500" src="../assets/img/logo.png"
           alt="logo de KPREM Arte Gráfico" />
       </h1>
   </header>
@@ -122,7 +126,10 @@
         Nam natus pariatur corporis, temporibus suscipit voluptates dolores non molestiae ea ipsam voluptatem impedit,
         eos maxime autem architecto repellendus excepturi ipsum cumque numquam quo. Explicabo nemo amet animi provident
         enim!</li>
-    </ol>
+    </ol>`;
+
+    </div>
+
   </main>
 
 
