--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta name="copyright" content="KPREM Arte Gráfico" />
   <meta name="robots" content="index" />
   <!-- FAV ICON -->
-  <link rel="icon" href="assets/icon/ico.png" />
+  <link rel="icon" href="assets/icon/favicon.png" />
   <!-- TITLE -->
   <title>KPREM Arte Gráfico</title>
 
@@ -24,24 +24,13 @@
 
   <!-- FONTAWESOME -->
   <script src="https://kit.fontawesome.com/0752328cab.js" crossorigin="anonymous"></script>
+
   <!-- SWEETALERT -->
   <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
 
   <!-- CSS STYLE -->
   <link rel="stylesheet" href="css/style.css" />
-
-  <!-- JS SCRIPT -->
-  <!-- <script src="js/main/main.js" defer></script>
-  <script src="js/forms/formsInsertados.js" defer></script>
-  <script src="js/forms/formRegistro.js" defer></script>
-  <script src="js/forms/formTabs.js" defer></script>
-  <script src="js/forms/formIngreso.js" defer></script>
-  <script src="js/forms/cuentaClass.js" defer></script>
-  <script src="js/carrito/productoClass.js" defer></script>
-  <script src="js/carrito/stockProductos.js" defer></script>
-  <script src="js/carrito/itemClass.js" defer></script>
-  <script src="js/carrito/carrito.js" defer></script> -->
 
   <!-- AOS ANIMATION -->
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
@@ -58,7 +47,8 @@
 
       <!-- LOGO -->
       <!-- <h1 class="h1"> -->
-      <img class="headerLogo" data-aos="fade-right" data-aos-duration="1500" src="assets/img/logo.png" alt="logo de KPREM Arte Gráfico" />
+      <img class="headerLogo" data-aos="fade-right" data-aos-duration="1500" src="assets/img/logo.png"
+        alt="logo de KPREM Arte Gráfico" />
       <!-- </h1> -->
 
       <!-- MENU -->
@@ -68,14 +58,14 @@
             <!-- Aquí dentro queda el carritoIcon y el cantidadProductosCarritoIcon -->
           </a>
           <button id="userText" class="userText">
-        </button>
+          </button>
         </nav>
       </section>
     </div>
   </header>
 
   <!-- MAIN -->
-  <main class=" main">
+  <main class="main" id="main">
     <div class="mainCarrito" id="mainCarrito">
       <div class="tablaCarrito" id="tablaCarrito">
         <div class="headerCarrito">
@@ -112,26 +102,7 @@
 
 
   <!-- FOOTER -->
-  <footer class="footer">
-    <div data-aos="fade-in" data-aos-duration="1000">
-      <section class="footerKprem">
-        <a href="https://www.instagram.com/kprem_artegrafico/?hl=es-la" rel="noopener noreferrer" target="_blank">
-          <img class="footerIcon" src="assets/icon/insta.png" alt="Enlace al Instagram de KPREM Arte Gráfico" />
-        </a>
-        <a href="https://www.facebook.com/kpremartegrafico/" target="_blank" rel="noopener noreferrer">
-          <img class="footerIcon" src="assets/icon/face.png" alt="Enlace al Facebook de KPREM Arte Gráfico" />
-        </a>
-      </section>
-      <section class="footerDev">
-        <section class="textFooter">
-          <p>© 2022 | All Rights Reserved</p>
-          <p>• Powered by Emanuel Escudero •</p>
-          <a href="https://escuderoemanuel.github.io/Portfolio/" rel="noopener noreferrer" target="_blank">
-            <img class="devImg" src="assets/dev/LogoSinBackground.png" alt="Developer Logotype" />
-          </a>
-        </section>
-      </section>
-    </div>
+  <footer class="footer" id="footer">
   </footer>
 
 
@@ -142,16 +113,17 @@
     AOS.init();
   </script>
 
-<script src="js/main/main.js" defer></script>
-<script src="js/forms/formsInsertados.js" defer></script>
-<script src="js/forms/formRegistro.js" defer></script>
-<script src="js/forms/formTabs.js" defer></script>
-<script src="js/forms/formIngreso.js" defer></script>
-<script src="js/forms/cuentaClass.js" defer></script>
-<script src="js/carrito/productoClass.js" defer></script>
-<script src="js/carrito/stockProductos.js" defer></script>
-<script src="js/carrito/itemClass.js" defer></script>
-<script src="js/carrito/carrito.js" defer></script>
+  <script src="js/main/main.js"></script>
+  <script src="js/forms/formsInsertados.js"></script>
+  <script src="js/forms/formRegistro.js"></script>
+  <script src="js/forms/formTabs.js"></script>
+  <script src="js/forms/formIngreso.js"></script>
+  <script src="js/forms/cuentaClass.js"></script>
+  <script src="js/carrito/productoClass.js"></script>
+  <script src="js/carrito/stockProductos.js"></script>
+  <script src="js/carrito/itemClass.js"></script>
+  <script src="js/carrito/carrito.js"></script>
+  <script src="js/footer/footer.js"></script>
 
 </body>
 
