--- a/pages/terms.html
+++ b/pages/terms.html
@@ -5,15 +5,24 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="keywords"
-    content="vinilo, personalizado, sublimado, estampado, remera, taza, gorra, vaso, rock, malvinas" />
   <meta name="description"
     content="KPREM Arte Gráfico es un emprendimiento de productos personalizados, mediante técnicas de estampación, como la sublimación, serigrafía y vinilos" />
+  <meta name="keywords"
+    content="tienda, vinilo, personalizado, sublimado, estampado, taza, gorra, vaso, rock, malvinas" />
   <meta name="author" content="Emanuel Escudero" />
-  <meta name="copyright" content="KPREM Arte Gráfico" />
+  <meta name="copyright" content="Emanuel Escudero" />
   <meta name="robots" content="index" />
+
+  <!-- META OpenGraph -->
+  <meta property="og:title" content="KPREM Arte Gráfico" />
+  <meta property="og:img" content="https://i.ibb.co/8NGyFPK/logo.png" />
+  <meta property="og:author" content="Emanuel Escudero" />
+  <meta
+    property="KPREM Arte Gráfico es un emprendimiento de productos personalizados, mediante técnicas de estampación, como la sublimación, serigrafía y vinilos." />
+
   <!-- FAV ICON -->
   <link rel="icon" href="../assets/icon/favicon.png" />
+
   <!-- TITLE -->
   <title>KPREM • Terms & Conditions</title>
 
@@ -27,7 +36,6 @@
 
   <!-- SWEETALERT -->
   <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-
 
   <!-- CSS STYLE -->
   <link rel="stylesheet" href="../css/style.css" />
