--- a/index.html
+++ b/index.html
@@ -5,13 +5,21 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="keywords"
-    content="vinilo, personalizado, sublimado, estampado, remera, taza, gorra, vaso, rock, malvinas" />
   <meta name="description"
     content="KPREM Arte Gráfico es un emprendimiento de productos personalizados, mediante técnicas de estampación, como la sublimación, serigrafía y vinilos" />
+  <meta name="keywords"
+    content="tienda, vinilo, personalizado, sublimado, estampado, taza, gorra, vaso, rock, malvinas" />
   <meta name="author" content="Emanuel Escudero" />
-  <meta name="copyright" content="KPREM Arte Gráfico" />
+  <meta name="copyright" content="Emanuel Escudero" />
   <meta name="robots" content="index" />
+
+  <!-- META OpenGraph -->
+  <meta property="og:title" content="KPREM Arte Gráfico" />
+  <meta property="og:img" content="https://i.ibb.co/8NGyFPK/logo.png" />
+  <meta property="og:author" content="Emanuel Escudero" />
+  <meta
+    property="KPREM Arte Gráfico es un emprendimiento de productos personalizados, mediante técnicas de estampación, como la sublimación, serigrafía y vinilos." />
+
   <!-- FAV ICON -->
   <link rel="icon" href="assets/icon/favicon.png" />
   <!-- TITLE -->
@@ -54,9 +62,9 @@
       <!-- MENU -->
       <section class="headerMenu" data-aos="fade-left" data-aos-duration="1500">
         <nav class="navBar">
-          <a class="btnCarrito" href="#" id="btnCarrito">
+          <button class="btnCarrito" id="btnCarrito">
             <!-- Aquí dentro queda el carritoIcon y el cantidadProductosCarritoIcon -->
-          </a>
+          </button>
           <button id="userText" class="userText">
           </button>
         </nav>
