Proyecto Final JavaScript CoderHouse - Escudero Emanuel

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     property="KPREM Arte Gráfico es un emprendimiento de productos personalizados, mediante técnicas de estampación, como la sublimación, serigrafía y vinilos." />
 
   <!-- FAV ICON -->
-  <link rel="icon" href="assets/icon/favicon.png" />
+  <link rel="icon" href="./assets/icon/favicon.png" />
   <!-- TITLE -->
   <title>KPREM Arte Gráfico</title>
 
