--- a/pages/terms.html
+++ b/pages/terms.html
@@ -154,8 +154,7 @@
       </section>
       <section class="footerDev">
         <section class="textFooter">
-          <p>© 2022 | All Rights Reserved</p>
-          <p>• Powered by Emanuel Escudero •</p>
+          <p>• Desarrollado por Emanuel Escudero •</p>
           <a href="https://escuderoemanuel.github.io/Portfolio/" rel="noopener noreferrer" target="_blank">
             <img class="devImg" src="../assets/dev/LogoSinBackground.png" alt="Developer Logotype" />
           </a>
