--- a/pages/terms.html
+++ b/pages/terms.html
@@ -155,8 +155,8 @@
       <section class="footerDev">
         <section class="textFooter">
           <p>• Desarrollado por Emanuel Escudero •</p>
-          <a href="https://escuderoemanuel.github.io/Portfolio/" rel="noopener noreferrer" target="_blank">
-            <img class="devImg" src="../assets/dev/LogoSinBackground.png" alt="Developer Logotype" />
+           <a href="https://emanuelescudero.ar" rel="noopener noreferrer" target="_blank">
+            <img class="devImg" src="https://i.ibb.co/ZT13Snc/Logo2023.png" alt="Developer Logotype" />
           </a>
         </section>
       </section>
